<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"

        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/logot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.8"
                android:visibility="gone" />

            <TextView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="DashBoard"
                android:textColor="@color/white1"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <RelativeLayout
                android:id="@+id/lin1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_margin="@dimen/_2sdp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    android:elevation="@dimen/_8sdp"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:cardElevation="@dimen/_4sdp">

                    <ImageView
                        android:id="@+id/ivStudentImageId"
                        android:layout_width="102dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="left|top"
                        android:layout_margin="@dimen/_2sdp"
                        android:src="@drawable/boy" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center"
                        android:layout_marginLeft="@dimen/_98sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="left|center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_margin="@dimen/_4sdp"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <Button
                                android:id="@+id/btnBriId"
                                style="@style/Base.Widget.AppCompat.Button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:background="@color/yello"
                                android:text="@string/bri"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <Button
                                android:id="@+id/btnEcoId"
                                style="@style/Base.Widget.AppCompat.Button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:background="@color/blue"
                                android:text="@string/eco"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <Button
                                android:id="@+id/btnStemId"
                                style="@style/Base.Widget.AppCompat.Button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:background="@color/skyblue"
                                android:text="@string/stem"
                                android:textColor="@color/black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btnOtherId"
                            style="@style/Base.Widget.AppCompat.Button"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:background="@color/orange"
                            android:gravity="center"
                            android:text="@string/others"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_358sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:elevation="@dimen/_8sdp"
                    app:cardCornerRadius="@dimen/_4sdp">

                    <com.applandeo.materialcalendarview.CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:headerColor="@color/colorPrimary" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/CardView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_88sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:elevation="@dimen/_8sdp"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:cardElevation="@dimen/_4sdp">

                    <RelativeLayout
                        android:id="@+id/rlOneId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivEventImageId"
                            android:layout_width="86dp"
                            android:layout_height="86dp"
                            android:layout_margin="4dp"
                            android:scaleType="fitXY" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_toRightOf="@+id/ivEventImageId"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/tvEventNameId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="4dp"
                                android:text="Rohit jain"
                                android:textColor="#000"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvEventStartTimeId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="2dp"
                                android:text="Rohit jain"
                                android:textColor="#000"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvLocationId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="2dp"
                                android:text="Rohit jain"
                                android:textColor="#000"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvNoEventId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="No Event"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:visibility="gone" />
                </android.support.v7.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_108sdp"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/first"
                    android:layout_width="@dimen/_98sdp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/blue"

                        app:cardCornerRadius="4dp">

                        <ImageView
                            android:id="@+id/fab"
                            android:layout_width="@dimen/_88sdp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_4sdp"
                            android:layout_marginRight="@dimen/_4sdp"
                            android:src="@drawable/mail" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>


                <android.support.v7.widget.CardView
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_2sdp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:id="@+id/second"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_ann"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/announcements"
                            android:textColor="#2a328a"
                            android:textSize="16sp" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvAnnounceMentId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </android.support.v7.widget.RecyclerView>


                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
